<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jing</string>
    <string name="action_settings">Settings</string>
    <string name="left_menu_explore">探索发现</string>
    <string name="left_menu_i_like">我喜欢的音乐</string>
    <string name="left_menu_message">消息中心</string>
    <string name="left_menu_local_cache">本地缓存音乐</string>
    <string name="left_menu_may_like">猜你可能喜欢</string>
    <string name="left_menu_otherPerson_listen">大家都在听什么</string>
    <string name="left_menu_setting">设置中心</string>
    <string name="left_menu_close">关闭程序</string>
    <string name="hello_world">Hello world!</string>

</resources>